--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ logging.level.org.springframework.security=DEBUG
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+
+vietqr.clientId=14b5faf9-15f5-4060-acd3-42bc8f9d3285
+vietqr.apiKey=554606ff-9822-4e8b-bec7-f8f0939b8f6d
